--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <table>
                 <tr>
                     <th>Product</th>
-                    <td></td>
+                    <td>Bowl</td>
                 </tr>
                 <tr>
                     <th>Product Code</th>
@@ -177,7 +177,7 @@
                 </tr>
                 <tr>
                     <th>20 Ft Container Carton Quantity</th>
-                    <td>1829Carton</td>
+                    <td>1829 Carton</td>
                 </tr>
                 <tr>
                     <th>40 Ft Container Carton Quantity</th>
