--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
                 </tr>
                 <tr>
                     <th>Product Size</th>
-                    <td>Length 25 cm x Width 25cm x Height 3cm</td>
+                    <td>Length 24.5 cm x Width 23cm x Height 6cm</td>
                 </tr>
                 <tr>
                     <th>Product CBM</th>
-                    <td>0.002</td>
+                    <td>0.003</td>
                 </tr>
                 <tr>
                     <th>Product Weight</th>
@@ -161,7 +161,7 @@
                 </tr>
                 <tr>
                     <th>Unit</th>
-                    <td>pcs</td>
+                    <td>Pcs</td>
                 </tr>
                 <tr>
                     <th>Carton Size</th>
